# Haskell

./: README.md  cabal.project  hie.yaml
.github/workflows/: AdventOfCode.yml  HackerRank.yml  Pentamino.yml  adventofcode.yml  haskell.yml
AdventOfCode/2019/: Day1.hs
AdventOfCode/2020/: AdventOfCode.cabal  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
HackerRank/Concave Polygon/: Concave.Polygon.hs  ConcavePolygon.hs
HackerRank/Concave Polygon/test/: ConcavePolygonTests.hs
HackerRank/ConcavePolygon/: ConcavePolygon.cabal  ConcavePolygon.hs  hie.yaml
HackerRank/ConcavePolygon/test/: ConcavePolygonPropertyTests.hs  ConcavePolygonTests.hs
HackerRank/Dice Path/: DicePath.hs
HackerRank/DicePath/: DicePath.cabal  DicePath.hs
HackerRank/DicePath/test/: DicePathTests.hs
HackerRank/Fibonacci/: Fibonacci.cabal  Fibonacci.hs
HackerRank/Fibonacci/test/: FibonacciTests.hs
Pentamino/: Pentamino.cabal  Pentamino.hs  draw
