cabal-version:       2.4

name:                Pentamino
version:             1.0
author:              Dmitry Tyurnikov
maintainer:          DimsFromDergachy@gmail.com
build-type:          Simple

executable Pentamino
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0,
                    containers >= 0.6.2.1
  main-is:          Pentamino.hs
