cabal-version:       2.4

name:                AdventOfCode2020
version:             1.0
author:              Dmitry Tyurnikov
maintainer:          DimsFromDergachy@gmail.com
build-type:          Simple

executable Day1
  build-depends:    base >= 4.13.0.0
  default-language: Haskell2010
  main-is:          Day1.hs

executable Day4
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0,
                    split >= 0.2.3.4
  main-is:          Day4.hs

executable Day5
  build-depends:    base >= 4.13.0.0
  default-language: Haskell2010
  main-is:          Day5.hs

executable Day6
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0,
                    split >= 0.2.3.4
  main-is:          Day6.hs

executable Day7
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0,
                    graphite >= 0.10.0.1
  main-is:          Day7.hs
