cabal-version:       2.4

name:                AdventOfCode2020
version:             1.0
author:              Dmitry Tyurnikov
maintainer:          DimsFromDergachy@gmail.com
build-type:          Simple

executable Day1
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0
  main-is:          Day1.hs

executable Day4
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0,
                    split >= 0.2.3.4
  main-is:          Day4.hs

executable Day5
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0
  main-is:          Day5.hs

executable Day6
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0,
                    split >= 0.2.3.4
  main-is:          Day6.hs

executable Day7
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0,
                    graphite >= 0.10.0.1
  main-is:          Day7.hs

executable Day8
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0,
                    array >= 0.5.4.0,
                    containers >= 0.6.4.1
  main-is:          Day8.hs

executable Day9
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0,
                    array >= 0.5.4.0,
  main-is:          Day9.hs

executable Day10
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0,
  main-is:          Day10.hs

executable Day11
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0,
                    array >= 0.5.4.0,
  main-is:          Day11.hs

executable Day12
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0,
  main-is:          Day12.hs

executable Day13
  default-language: Haskell2010
  build-depends:    base >= 4.13.0.0,
                    split >= 0.2.3.4,
                    arithmoi >= 0.11.0.1,
  main-is:          Day13.hs
