cabal-version:       2.4

name:                ConcavePolygon
version:             1.0
author:              Dmitry Tyurnikov
maintainer:          DimsFromDergachy@gmail.com
build-type:          Simple

library
  exposed-modules:     ConcavePolygon
  build-depends:       base ^>=4.13.0.0
  default-language:    Haskell2010

test-suite ConcavePolygon-UnitTests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ConcavePolygonTests.hs
  build-depends:       base ^>=4.13.0.0,
                       ConcavePolygon,
                       tasty >= 1.4,
                       tasty-hunit >= 0.10,

test-suite ConcavePolygon-QuickCheckTests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ConcavePolygonPropertyTests.hs
  build-depends:       base ^>=4.13.0.0,
                       ConcavePolygon,
                       tasty >= 1.4,
                       tasty-quickcheck >= 0.10