cabal-version:       2.4

name:                DicePath
version:             1.0
author:              Dmitry Tyurnikov
maintainer:          DimsFromDergachy@gmail.com

library
  exposed-modules:     DicePath
  build-depends:       base >= 4.13.0.0,
  default-language:    Haskell2010

test-suite DicePath-UnitTest
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DicePathTests.hs
  build-depends:       base >= 4.13.0.0,
                       DicePath,
                       tasty >= 1.4,
                       tasty-hunit >= 0.10,
                       tasty-quickcheck >= 0.10