cabal-version:       2.4

name:                Fibonacci
version:             1.0
author:              Dmitry Tyurnikov
maintainer:          DimsFromDergachy@gmail.com

library
  exposed-modules:     Fibonacci
  build-depends:       base >= 4.13.0.0,
  default-language:    Haskell2010

test-suite Fibonacci-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             FibonacciTests.hs
  build-depends:       base >= 4.13.0.0,
                       Fibonacci,
                       tasty >= 1.4,
                       tasty-hunit >= 0.10,
                       tasty-quickcheck >= 0.10

